--- a/NCF.ipynb
+++ b/NCF.ipynb
@@ -1147,10 +1147,10 @@
         "from scipy.spatial.distance import euclidean\n",
         "from scipy.special import kl_div\n",
         "\n",
-        "# TESTING ONLY\n",
-        "#random.seed(42)\n",
-        "#np.random.seed(42)\n",
-        "#torch.manual_seed(42)\n",
+        "\n",
+        "random.seed(42)\n",
+        "np.random.seed(42)\n",
+        "torch.manual_seed(42)\n",
         "\n",
         "# Use (cuda) GPU if available, otherwise use CPU\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
